# ruby-diamond-client

./: .gitignore  OWNERSHIP.md  README.md  app.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  setup.sh
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  USER_GUIDE.md
skills/code-review/: SKILL.md
skills/project-bootstrap/: SKILL.md
skills/rust-analyzer/: SKILL.md
src/: App.tsx  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/llamacpp/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/mesh/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/skills/: mod.rs
src-tauri/src/system/: mod.rs
src-tauri/src/tools/: builtin.rs  mod.rs  registry.rs
src/components/: AgentTabs.tsx  Chat.tsx  Editor.tsx  Explorer.tsx  LlamaPanel.tsx  MemoryPanel.tsx  MeshPanel.tsx  PluginPanel.tsx  Sidebar.tsx  Splash.tsx  SysAdminPanel.tsx  SystemPanel.tsx  Terminal.tsx
src/lib/: agent.ts  api.ts  provider.ts
