[package]
name = "ruby-diamond"
version = "0.1.0"
edition = "2024"
description = "Ruby Diamond — AI-powered terminal & code editor with tool system and skill engine"
authors = ["Ruby Diamond Team"]
license = "MIT"

[lib]
name = "ruby_diamond_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.33"
glob = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
